--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -404,23 +404,89 @@
 			ning html, learning, and CSIT-107, and for a description we will put in a couple lines about
 			what we are doing, and finally, add our name:</p>
 			
-			<pre><code><head>
-<title>Our First Page</title>
-<meta name="keywords" content="beginning html, learning,
-CSIT-107" />
-<meta name="description" content="A beginning web page for
-CSIT-107 SUNY Fredonia" />
-<meta name="author" content="Your Name Here" />
-				</head></code></pre>
+			<pre><code>
+				<head>
+				<title>Our First Page</title>
+				<meta name="keywords" content="beginning html, learning,
+				CSIT-107" />
+				<meta name="description" content="A beginning web page for
+				CSIT-107 SUNY Fredonia" />
+				<meta name="author" content="Your Name Here" />
+				</head>
+			</code></pre>
 			
-			<p></p>
+			<p>There are a few things in this example for us to look at. First, you will note that title has
+its own tag. What you put in this tag is what will appear as the title in your browser window,
+and on the tab in your browser for this page (You can only have one set of these tags in a
+document). Keep in mind, this title will not appear on the page itself. If we want to include
+it as part of our page content, we would do that from within the body tags.</p>
 			
-			<p></p>
+			<p>Next, we see that the values assigned to name and content are placed in quotes. The
+quotes identify what belongs to that attribute. While it is standard practice to use double-
+quoted strings, we can also use single quotes. These can be useful when creating HTML
+statements like those above as output from other languages (we will see examples of this
+in PHP).</p>
 			
-			<p></p>
+			<p>You might also note that our keywords are comma separated, meaning we break them up
+by placing commas between different values; we do not need to add separate quotes around
+each word or phrase.</p>
 			
-			<p></p>
+			<p>In the HTML5 specs, the meta tag can also have attributes named charset and http-
+equiv. Charset allows us to specify a particular set of characters we want to use for the page,
+an http-equiv supports content-type, default-style, and refresh as options. This lets us tell
+the browser what type of page we have (in our case, text/html), name a default style sheet
+(we will get to this later) and specify in terms of seconds how often we want to refresh the
+page, if at all.</p>
 			
+			<p><b>Body</b><br>
+			All of the content that we wish to have on the screen should be encompassed by a set of
+			body tags. The header, content, footer, and div (an all-purpose tag derived from “division”)
+			sections are examples of what we can put in our body tags, which we will see in the next
+			example. Keep in mind that using these tags does not prevent us from seeing content that is
+			not within the body. Tags are used to guide the interpreter in how to display the document.
+			Unless it is specifically within the <head> tags, browsers may elect to display any content
+			that is not properly nested in different ways.</p>
+			
+			<p><b>Header, Footer</b><br>
+			The header and footer tags are new in HTML5. They were added due to the volume of
+			sites that define a top and bottom section to their pages. Allowing these tags makes it easier
+			to define and find those parts of the layout. The header and footer should be nested within
+			your body tags, but are not a requirement. For our example, we will put a screen title in our
+			header and a copyright in our footer:</p>
+			
+			<p>After saving your file and refreshing your browser, you should see our sentence in the
+			top left, followed by Hello World, and then © 2013 Your Name Here. We made our title
+			text extra-large by wrapping it in -h1> tags. H1 stands for heading one, the largest heading
+			by default. We can also use h2 through h6 to access additional styles. Just as in a written
+			document, we use these headings to distinguish different portions of our text. Your browser
+			is applying a default style to make h1 look as it does on your screen. Later, we will see how
+			to override this default style to make our headings look how we want them to. Using these
+			headings allows us to quickly identify different portions of content not only for the reader,
+			but also for search engines, which typically consider content in these tags as indicators of
+			what your site is about, reducing our SEO efforts later.</p>
+			
+			<p><b>Div/Span</b><br>
+			While -p> helps us split up our text, we also need a mechanism to separate different
+			pieces of content like we did when we used header and footer. This will allow us to define
+			more than just a top, middle and bottom to our page. To do this, we can wrap those sections
+			in -div> tags. Div stands for divide—it defines a section of content that should be treated
+			as separate from other content. Span is very similar to div, except that it should identify
+			inline content, meaning material that is within a block of text. Ultimately, a div will place
+			a line break before and after its tags, while a span will not. Aside from this, these tags are
+			functionally equivalent. While these tags seem very plain now, they are very useful when
+			creating complex layouts, and are the tags we will use most often.</p>
+			
+			<p>While div and span are effective for styling, we should strive to use the best set of tags
+			available so browsers, users, and bots are able to understand our site and its layout, like the
+			header> and footer> that we have already used in our code. Just keep in mind, not all of 
+			these are supported in all browsers. If you are wondering which browsers will work with
+			what tags, you can refer to caniuse.com to see what is available.</p>
+			
+			<p>To create organization for our site, we will add some more conceptual sections to our
+			file. You will notice the layout does not actually go left or right as we are labeling our divs
+			(everything will organize top-to-bottom). This is because we need to add CSS for the full
+			effect. We will pick this example up again later to add the CSS needed to create the layout
+			we want:</p>									
 		</details>
 		
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
