--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -584,13 +584,13 @@ preceded by a pound sign in place of a traditional URL.</p>
 		<h2 id="week2">Week 2</h2>
 		<details>
 			<summary>
-				<h3 id="dom">The Document Object Model (DOM)</h3>
+				<b id="dom">The Document Object Model (DOM)</b>
 			</summary>
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" alt="picture The Document Object Model" title="The Document Object Model (DOM)"height="70%" width="70%">
 		</details>
 		<details>
 			<summary>
-				<h3 id="html5elements">HTML5 Elements - Tags, Syntax, Semantics, and Templates</h3>
+				<b id="html5elements">HTML5 Elements - Tags, Syntax, Semantics, and Templates</b>
 			</summary>
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Display_zpsfvwy3btm.gif" alt="picture of block and inline elevents" title="block and inline elevents" height="70%" width="70%">
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Images_zpsqdke2xhp.gif" alt="picture of image tag" title="image tag" height="70%" width="70%">
