--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -355,18 +355,7 @@
 			between (typically referred to this as “inside”) your HTML tags, add an empty set of tags
 			labeled head, and another labeled body. Then create two more sets labeled header and footer
 				inside your body tags. Your resulting file should look like this:</p>
-				<pre><code>	<html>
-					<head>
-					</head>
-					<body>
-					<header>
-					</header>
-					<footer>
-					</footer>
-					</body>
-					</html>
-				</code></pre>
-						
+										
 			<p>Now we can better see how elements can be placed within one another, called nesting. If
 			we save our file again, and double click the icon for our file in our documents folder to open
 			it, it should open in your computer’s default browser as a white page with Hello World in
@@ -383,8 +372,8 @@
 			<p>Some tags, like those for including images, do not need a closing tag in order to work as
 			no content is necessary inside the tags. In this case, we simply use the tag itself where we
 			want it. In older versions of HTML one of the differences between document types was
-			how we closed single tag elements. HTML, for example, wanted a break written as <br>
-			while an XHTML document wanted <br/>. HMTL5 will recognize either of these.</p>
+			how we closed single tag elements. HTML, for example, wanted a break written as -br>
+			while an XHTML document wanted -br/>. HMTL5 will recognize either of these.</p>
 			
 			<p><b>Head</b><br>
 			Getting back into our document, we see that the first set of tags is called head. This is
@@ -397,7 +386,7 @@
 			inside our head to give it a title, keywords, a description, and other details. These pieces of
 			information help the user and bots understand what the page is about.</p>
 			
-			<p>Each of these items are all parts of the meta tag (<meta/>). Some tags have special
+			<p>Each of these items are all parts of the meta tag (-meta/>). Some tags have special
 			features that can be added to their definitions; these are called attributes. Meta tags support
 			attributes like name and content. How we define these attributes will help the browser
 			understand our page better. We will set our title as Our First Page, add the keywords begin-
