--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -392,40 +392,29 @@
 			understand our page better. We will set our title as Our First Page, add the keywords begin-
 			ning html, learning, and CSIT-107, and for a description we will put in a couple lines about
 			what we are doing, and finally, add our name:</p>
-			
-			<pre><code>
-				<head>
-				<title>Our First Page</title>
-				<meta name="keywords" content="beginning html, learning,
-				CSIT-107" />
-				<meta name="description" content="A beginning web page for
-				CSIT-107 SUNY Fredonia" />
-				<meta name="author" content="Your Name Here" />
-				</head>
-			</code></pre>
-			
+						
 			<p>There are a few things in this example for us to look at. First, you will note that title has
-its own tag. What you put in this tag is what will appear as the title in your browser window,
-and on the tab in your browser for this page (You can only have one set of these tags in a
-document). Keep in mind, this title will not appear on the page itself. If we want to include
-it as part of our page content, we would do that from within the body tags.</p>
+			its own tag. What you put in this tag is what will appear as the title in your browser window,
+			and on the tab in your browser for this page (You can only have one set of these tags in a
+			document). Keep in mind, this title will not appear on the page itself. If we want to include
+			it as part of our page content, we would do that from within the body tags.</p>
 			
 			<p>Next, we see that the values assigned to name and content are placed in quotes. The
-quotes identify what belongs to that attribute. While it is standard practice to use double-
-quoted strings, we can also use single quotes. These can be useful when creating HTML
-statements like those above as output from other languages (we will see examples of this
-in PHP).</p>
+			quotes identify what belongs to that attribute. While it is standard practice to use double-
+			quoted strings, we can also use single quotes. These can be useful when creating HTML
+			statements like those above as output from other languages (we will see examples of this
+			in PHP).</p>
 			
 			<p>You might also note that our keywords are comma separated, meaning we break them up
-by placing commas between different values; we do not need to add separate quotes around
-each word or phrase.</p>
+			by placing commas between different values; we do not need to add separate quotes around
+			each word or phrase.</p>
 			
 			<p>In the HTML5 specs, the meta tag can also have attributes named charset and http-
-equiv. Charset allows us to specify a particular set of characters we want to use for the page,
-an http-equiv supports content-type, default-style, and refresh as options. This lets us tell
-the browser what type of page we have (in our case, text/html), name a default style sheet
-(we will get to this later) and specify in terms of seconds how often we want to refresh the
-page, if at all.</p>
+			equiv. Charset allows us to specify a particular set of characters we want to use for the page,
+			an http-equiv supports content-type, default-style, and refresh as options. This lets us tell
+			the browser what type of page we have (in our case, text/html), name a default style sheet
+			(we will get to this later) and specify in terms of seconds how often we want to refresh the
+			page, if at all.</p>
 			
 			<p><b>Body</b><br>
 			All of the content that we wish to have on the screen should be encompassed by a set of
@@ -433,7 +422,7 @@ page, if at all.</p>
 			sections are examples of what we can put in our body tags, which we will see in the next
 			example. Keep in mind that using these tags does not prevent us from seeing content that is
 			not within the body. Tags are used to guide the interpreter in how to display the document.
-			Unless it is specifically within the <head> tags, browsers may elect to display any content
+			Unless it is specifically within the -head> tags, browsers may elect to display any content
 			that is not properly nested in different ways.</p>
 			
 			<p><b>Header, Footer</b><br>
@@ -562,7 +551,7 @@ preceded by a pound sign in place of a traditional URL.</p>
 		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=-c8iWUh3Sv4&app=desktop">The origins of MOSAIC</a></p>
 		
 		<h3 id="how-it-works">How it Works</h3>
-			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--How-it-Works_zpshvnyom2t.gif" alt="picture How-it-Works" title="How it Works" height="70%" width="70%">
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--How-it-Works_zpshvnyom2t.gif" alt="picture How-it-Works" title="How it Works" >
 			
 	</section>
 	<!-- week1 end -->
