--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -551,7 +551,7 @@ preceded by a pound sign in place of a traditional URL.</p>
 		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=-c8iWUh3Sv4&app=desktop">The origins of MOSAIC</a></p>
 		
 		<h3 id="how-it-works">How it Works</h3>
-			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--How-it-Works_zpshvnyom2t.gif" alt="picture How-it-Works" title="How it Works" >
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--How-it-Works_zpshvnyom2t.gif" width="70%" alt="picture How-it-Works" title="How it Works" >
 			
 	</section>
 	<!-- week1 end -->
