--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -26,7 +26,7 @@
 					<li><a href="#week2">Week Two</a>
 					<ul>
 						<li><a href="#dom">The Document Object Model (DOM)</a></li>
-						<li><a href="#html5elements">HTML5 Elements - Tags, Syntax, Semantics, and Templates</a></li>
+						<li><a href="#html5elements" target="_blank">HTML5 Elements - Tags, Syntax, Semantics, and Templates</a></li>
 					</ul>
 					</li>
 				</ul>
