--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -26,7 +26,7 @@
 					<li><a href="#week2">Week Two</a>
 					<ul>
 						<li><a href="#dom">The Document Object Model (DOM)</a></li>
-						<li><a href="#html5elements" target="_blank">HTML5 Elements - Tags, Syntax, Semantics, and Templates</a></li>
+						<li><a href="#html5elements">HTML5 Elements - Tags, Syntax, Semantics, and Templates</a></li>
 					</ul>
 					</li>
 				</ul>
@@ -541,7 +541,7 @@ preceded by a pound sign in place of a traditional URL.</p>
 		
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
 		<p><a title="Optional but oh so good" href="http://learn.shayhowe.com/html-css/getting-to-know-html/">Getting to Know HTML</a></p>
-		<p><a title="w3schools.com/tags" href="http://www.w3schools.com/tags/">HTML Tags</a></p>
+		<p><a title="w3schools.com/tags" href="http://www.w3schools.com/tags/" target="_blank">HTML Tags</a></p>
 		<p><a href="https://boagworld.com/dev/semantic-code-what-why-how/">Semantic code: What? Why? How?</a></p>
 		<p><a title="dev.opera.com" href="https://dev.opera.com/articles/new-structural-elements-in-html5/">New Structural Elements in HTML5</a></p>
 		<p><a href="http://www.copypastecharacter.com/">List of character encodings</a></p>
