--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -573,6 +573,12 @@ preceded by a pound sign in place of a traditional URL.</p>
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Display_zpsfvwy3btm.gif" alt="picture of block and inline elevents" title="block and inline elevents" >
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Images_zpsqdke2xhp.gif" alt="picture of image tag" title="image tag" >
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Special-Entities_zpssx2o0via.gif" alt="picture Special Entities" title="Special Entities" >
+				<figure>
+					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan-Figure_zps68gredcx.gif" alt="Figure tag" title="Figure">
+					<figcaption>
+						Fig.1 Semantik Tags - figure.
+					</figcaption>
+				</figure>
 		</details>
 		
 		<br>
