--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -570,13 +570,33 @@ preceded by a pound sign in place of a traditional URL.</p>
 			<summary>
 				<b id="html5elements">HTML5 Elements - Tags, Syntax, Semantics, and Templates</b>
 			</summary>
-				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Display_zpsfvwy3btm.gif" alt="picture of block and inline elevents" title="block and inline elevents" >
-				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Images_zpsqdke2xhp.gif" alt="picture of image tag" title="image tag" >
-				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Special-Entities_zpssx2o0via.gif" alt="picture Special Entities" title="Special Entities" >
 				<figure>
-					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan-Figure_zps68gredcx.gif" alt="Figure tag" title="Figure" width="700">
+					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Display_zpsfvwy3btm.gif" alt="picture of block and inline elevents" 
+				     	title="block and inline elevents" width="800">
 					<figcaption>
-						Fig.1 Semantik Tags - figure.
+						Fig.1 Dock and inline elevents.
+					</figcaption>
+				</figure>
+			
+				<figure>
+					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Images_zpsqdke2xhp.gif" alt="picture of image tag" title="image tag" width="800">
+					<figcaption>
+						Fig.2 Images.
+					</figcaption>
+				</figure>
+			
+				<figure>
+					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Special-Entities_zpssx2o0via.gif" alt="picture Special Entities" title="Special Entities" 
+				    	 width="800">
+					<figcaption>
+						Fig.3 Special-Entities.
+					</figcaption>
+				</figure>					
+				
+				<figure>
+					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan-Figure_zps68gredcx.gif" alt="Figure tag" title="Figure" width="800">
+					<figcaption>
+						Fig.4 Semantik Tags - Figure.
 					</figcaption>
 				</figure>
 		</details>
