--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -564,7 +564,13 @@ preceded by a pound sign in place of a traditional URL.</p>
 			<summary>
 				<b id="dom">The Document Object Model (DOM)</b>
 			</summary>
-				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" alt="picture The Document Object Model" title="The Document Object Model (DOM)">
+				<figure>
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" 
+				     alt="picture The Document Object Model" title="The Document Object Model (DOM)" width="800">
+				<figcaption>
+						The Document Object Model (DOM)
+				</figcaption>
+				</figure>
 		</details>
 		<details>
 			<summary>
@@ -574,14 +580,14 @@ preceded by a pound sign in place of a traditional URL.</p>
 					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Display_zpsfvwy3btm.gif" alt="picture of block and inline elevents" 
 				     	title="block and inline elevents" width="800">
 					<figcaption>
-						Fig.1 Dock and inline elevents.
+						Fig.1 Block and inline elevents
 					</figcaption>
 				</figure>
 			
 				<figure>
 					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Images_zpsqdke2xhp.gif" alt="picture of image tag" title="image tag" width="800">
 					<figcaption>
-						Fig.2 Images.
+						Fig.2 Images
 					</figcaption>
 				</figure>
 			
@@ -589,14 +595,14 @@ preceded by a pound sign in place of a traditional URL.</p>
 					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Special-Entities_zpssx2o0via.gif" alt="picture Special Entities" title="Special Entities" 
 				    	 width="800">
 					<figcaption>
-						Fig.3 Special-Entities.
+						Fig.3 Special-Entities
 					</figcaption>
 				</figure>					
 				
 				<figure>
 					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan-Figure_zps68gredcx.gif" alt="Figure tag" title="Figure" width="800">
 					<figcaption>
-						Fig.4 Semantik Tags - Figure.
+						Fig.4 Semantik Tags - Figure
 					</figcaption>
 				</figure>
 		</details>
