--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="My personal draft">
 	<meta name="author" content="Yevgen Farasevych">
-	<title>My stuff</title>
+	<title>Home page</title>
 	
 	<style type="text/css">		
 	</style>
