--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -552,7 +552,8 @@ preceded by a pound sign in place of a traditional URL.</p>
 		
 		<h3 id="how-it-works">How it Works</h3>
 			<figure>
-			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--How-it-Works_zpshvnyom2t.gif" width="800" alt="picture How-it-Works" title="How it Works" >
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--How-it-Works_zpshvnyom2t.gif" 
+			     width="800" alt="How it Works" title="How it Works" >
 			<figcaption>
 				
 				</figcaption>
@@ -570,7 +571,7 @@ preceded by a pound sign in place of a traditional URL.</p>
 			</summary>
 				<figure>
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" 
-				     alt="picture The Document Object Model" title="The Document Object Model (DOM)" width="800">
+				     alt="The Document Object Model" title="The Document Object Model (DOM)" width="800">
 				<figcaption>
 						The Document Object Model (DOM)
 				</figcaption>
@@ -581,30 +582,34 @@ preceded by a pound sign in place of a traditional URL.</p>
 				<b id="html5elements">HTML5 Elements - Tags, Syntax, Semantics, and Templates</b>
 			</summary>
 				<figure>
-					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Display_zpsfvwy3btm.gif" alt="picture of block and inline elevents" 
-				     	title="block and inline elevents" width="800">
+					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Display_zpsfvwy3btm.gif" 
+					     alt="block and inline elevents" 
+				     		title="block and inline elevents" width="800">
 					<figcaption>
 						Fig.1 Block and inline elevents
 					</figcaption>
 				</figure>
 			
 				<figure>
-					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Images_zpsqdke2xhp.gif" alt="picture of image tag" title="image tag" width="800">
+					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Images_zpsqdke2xhp.gif" 
+					     alt="image tag" title="image tag" width="800">
 					<figcaption>
 						Fig.2 Images
 					</figcaption>
 				</figure>
 			
 				<figure>
-					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Special-Entities_zpssx2o0via.gif" alt="picture Special Entities" title="Special Entities" 
-				    	 width="800">
+					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Special-Entities_zpssx2o0via.gif" 
+					     alt="Special Entities" title="Special Entities" 
+				    	 	width="800">
 					<figcaption>
 						Fig.3 Special-Entities
 					</figcaption>
 				</figure>					
 				
 				<figure>
-					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan-Figure_zps68gredcx.gif" alt="Figure tag" title="Figure" width="800">
+					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan-Figure_zps68gredcx.gif" 
+					     alt="Figure tag" title="Figure" width="800">
 					<figcaption>
 						Fig.4 Semantik Tags - Figure
 					</figcaption>
