--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -616,6 +616,19 @@ preceded by a pound sign in place of a traditional URL.</p>
 				</figure>
 		</details>
 		
+		<details>
+			<summary>
+				<b id="images">Images</b>
+			</summary>
+				<figure>
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Favicons_zpskdbxboqq.gif" 
+				     alt="Favicons" title="Favicons" width="800">
+				<figcaption>
+						Favicons
+				</figcaption>
+				</figure>
+		</details>
+		
 		<br>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
 			
