--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://medium.com/@mr_mig_by/a-year-of-change-a3063120e296#.c3eik9kho"
+			   	alt="A Year of Change" target="_blank" title="A Year of Change (2016-11-28)">A Year of Change by Alexey Migutsky</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://medium.com/@ABatickaya/%D0%B4%D0%BE%D1%81%D1%82%D1%83%D0%BF%D0%BD%D0%BE%D1%81%D1%82%D1%8C-%D1%81%D0%B0%D0%B9%D1%82%D0%BE%D0%B2-%D0%B4%D0%BB%D1%8F-%D1%81%D0%B0%D0%BC%D1%8B%D1%85-%D0%BC%D0%B0%D0%BB%D0%B5%D0%BD%D1%8C%D0%BA%D0%B8%D1%85-28d8ab6ebd3d#.ob2lp2pgr"
 			   	alt="Доступность сайтов для самых маленьких" target="_blank" title="Перевод на medium.com">Доступность сайтов для самых маленьких</a>
 		</details>
