--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -27,6 +27,8 @@
 					<ul>
 						<li><a href="#dom">The Document Object Model (DOM)</a></li>
 						<li><a href="#html5elements">HTML5 Elements - Tags, Syntax, Semantics, and Templates</a></li>
+						<li><a href="#favicons">Favicons</a></li>
+						<li><a href="#multimedia">Multimedia</a></li>						
 					</ul>
 					</li>
 				</ul>
@@ -618,13 +620,26 @@ preceded by a pound sign in place of a traditional URL.</p>
 		
 		<details>
 			<summary>
-				<b id="images">Images</b>
+				<b id="favicons">Favicons</b>
 			</summary>
 				<figure>
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Favicons_zpskdbxboqq.gif" 
 				     alt="Favicons" title="Favicons" width="800">
 				<figcaption>
 						Favicons
+				</figcaption>
+				</figure>
+		</details>
+		
+		<details>
+			<summary>
+				<b id="multimedia">Multimedia</b>
+			</summary>
+				<figure>
+				<img src=".gif" 
+				     alt="Multimedia" title="Multimedia" width="800">
+				<figcaption>
+						Multimedia
 				</figcaption>
 				</figure>
 		</details>
