--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -636,10 +636,11 @@ preceded by a pound sign in place of a traditional URL.</p>
 				<b id="multimedia">Multimedia</b>
 			</summary>
 				<figure>
-				<img src=".gif" 
-				     alt="Multimedia" title="Multimedia" width="800">
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/
+					  Introductio-to-HTML5-by-UniversityofMichigan--video_zpsny6bwcyp.gif" 
+				     alt="Video" title="Video" width="800">
 				<figcaption>
-						Multimedia
+						Video
 				</figcaption>
 				</figure>
 		</details>
