--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -642,6 +642,14 @@ preceded by a pound sign in place of a traditional URL.</p>
 						Video
 				</figcaption>
 				</figure>
+			
+				<figure>
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Audio_zpsxujtfjnb.gif" 
+				     alt="Audio" title="Audio" width="800">
+				<figcaption>
+						Audio
+				</figcaption>
+				</figure>
 		</details>
 		
 		<br>
