--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -650,6 +650,14 @@ preceded by a pound sign in place of a traditional URL.</p>
 						Audio
 				</figcaption>
 				</figure>
+			
+								<figure>
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Setting-Clips_zpsggw70qqh.gif" 
+				     alt="Setting Clips" title="Setting Clips" width="800">
+				<figcaption>
+						Setting Clips ()
+				</figcaption>
+				</figure>
 		</details>
 		
 		<br>
