--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -655,7 +655,7 @@ preceded by a pound sign in place of a traditional URL.</p>
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Setting-Clips_zpsggw70qqh.gif" 
 				     alt="Setting Clips" title="Setting Clips" width="800">
 				<figcaption>
-						Setting Clips ()
+						Setting Clips (.mp3#t=15:35)
 				</figcaption>
 				</figure>
 		</details>
