--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="My personal draft for Introduction to HTML5 by University of Michigan">
 	<meta name="author" content="Yevgen Farasevych">
 	<title>Introduction to HTML5 | University of Michigan</title>
