--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			   	alt="A Year of Change" target="_blank" title="Medium.com (2016-11-28)">A Year of Change by Alexey Migutsky</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://vimeo.com/67092568"
 			   	alt="Свобода и ответственность. Опыт Tanki-Online в создании Agile-культуры" 
-				target="_blank" title="vimeo (2016-11-28)">Свобода и ответственность. Опыт Tanki-Online в создании Agile-культуры</a><br>
+				target="_blank" title="vimeo (2016-11-28)">Свобода и ответственность. Опыт Tanki-Online в создании Agile-культуры <b>(Video)</b></a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://medium.com/@ABatickaya/%D0%B4%D0%BE%D1%81%D1%82%D1%83%D0%BF%D0%BD%D0%BE%D1%81%D1%82%D1%8C-%D1%81%D0%B0%D0%B9%D1%82%D0%BE%D0%B2-%D0%B4%D0%BB%D1%8F-%D1%81%D0%B0%D0%BC%D1%8B%D1%85-%D0%BC%D0%B0%D0%BB%D0%B5%D0%BD%D1%8C%D0%BA%D0%B8%D1%85-28d8ab6ebd3d#.ob2lp2pgr"
 			   	alt="Доступность сайтов для самых маленьких" target="_blank" title="Перевод на medium.com">Доступность сайтов для самых маленьких</a>
 		</details>
