--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</ul>
 	<ul><h2>Websites</h2>	
 		<ul>
-			<li><a href="http://riverco.de/" title="Coderiver (2016-11-28)">riverco.de</a></li>
+			<li><a href="http://riverco.de/" title="Coderiver (2016-11-28)" target="_blank">riverco.de</a></li>
 						
 							
 		</ul>		
