--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 			</summary>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://frontender.com.ua/mobile-web/wtf-viewport/"
 			   	alt="Что такое Viewport" target="_blank" title="frontender.com.ua (2016-11-28)">Что такое Viewport, как он работает и для чего вообще нужен</a><br>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://frontender.info/building-interactive-html5-videos/"
+			   	alt="Создание интерактивного видео на HTML5" target="_blank" 
+				title="frontender.info (2016-11-28)">Создание интерактивного видео на HTML5</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://medium.com/@mr_mig_by/a-year-of-change-a3063120e296#.c3eik9kho"
 			   	alt="A Year of Change" target="_blank" title="Medium.com (2016-11-28)">A Year of Change by Alexey Migutsky</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://vimeo.com/67092568"
