--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://frontender.info/whats-wrong-with-jquery-and-bootstrap/"
+			   	alt="О jQuery и Bootstrap" target="_blank" title="frontender.info (2016-11-29)">О jQuery и Bootstrap: расставляем точки над «i»</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://frontender.com.ua/mobile-web/wtf-viewport/"
 			   	alt="Что такое Viewport" target="_blank" title="frontender.com.ua (2016-11-28)">Что такое Viewport, как он работает и для чего вообще нужен</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://frontender.info/building-interactive-html5-videos/"
