add @Длинная телега про Бутстрап@

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://gist.github.com/iAdramelk/d328b73c72cab92ef95f"
+			   	alt="Длинная телега про Бутстрап" target="_blank" title="gist.github.com (2016-11-29)">Длинная телега про Бутстрап</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://frontender.info/whats-wrong-with-jquery-and-bootstrap/"
 			   	alt="О jQuery и Bootstrap" target="_blank" title="frontender.info (2016-11-29)">О jQuery и Bootstrap: расставляем точки над «i»</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://frontender.com.ua/mobile-web/wtf-viewport/"
