--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://css.yoksel.ru/svg-patterns/"
+			   	alt="SVG-паттерны" target="_blank" 
+				title="css.yoksel.ru (прочитать)"><b>SVG-паттерны</b></a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://prgssr.ru/development/grid-fleksboks-i-vyravnivanie-blokov-nasha-novaya-sistema-raskladki.html"
 			   	alt="Грид, флексбокс и выравнивание блоков: наша новая система раскладки" target="_blank" 
-				title="http://prgssr.ru/ (прочитать)"><b>Грид, флексбокс и выравнивание блоков: наша новая система раскладки</b></a><br>
+				title="prgssr.ru (прочитать)"><b>Грид, флексбокс и выравнивание блоков: наша новая система раскладки</b></a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://gist.github.com/iAdramelk/d328b73c72cab92ef95f"
 			   	alt="Длинная телега про Бутстрап" target="_blank" title="gist.github.com (2016-11-29)">Длинная телега про Бутстрап</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://frontender.info/whats-wrong-with-jquery-and-bootstrap/"
