--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://habrahabr.ru/post/235851/"
+			   	alt="CSS GuideLines, часть 1. Синтаксис и форматирование" target="_blank" 
+				title="habrahabr.ru (прочитать)"><b>CSS GuideLines, часть 1. Синтаксис и форматирование</b></a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://codeguida.com/post/448/"
 			   	alt="Що ви повинні знати про змінні CSS" target="_blank" 
 				title="codeguida.com (прочитати)"><b>Що ви повинні знати про змінні CSS</b></a><br>
