--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -29,7 +29,9 @@
 						<li><a href="#dom">The Document Object Model (DOM)</a></li>
 						<li><a href="#html5elements">HTML5 Elements - Tags, Syntax, Semantics, and Templates</a></li>
 						<li><a href="#favicons">Favicons</a></li>
-						<li><a href="#multimedia">Multimedia</a></li>						
+						<li><a href="#images">Images</a></li>
+						<li><a href="#multimedia">Multimedia</a></li>
+						<li><a href="#tables">Tables</a></li>
 					</ul>
 					</li>
 				</ul>
@@ -634,6 +636,19 @@ preceded by a pound sign in place of a traditional URL.</p>
 		
 		<details>
 			<summary>
+				<b id="images">Images</b>
+			</summary>
+				<figure>
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/Introductio-to-HTML5-by-UniversityofMichigan--Using-Images-as-the-Link_zps0cbbry3y.gif" 
+				     alt="Images" title="Using-Images-as-the-Link" width="800">
+				<figcaption>
+						Using Images as the Link
+				</figcaption>
+				</figure>
+		</details>
+		
+		<details>
+			<summary>
 				<b id="multimedia">Multimedia</b>
 			</summary>
 				<figure>
@@ -645,7 +660,8 @@ preceded by a pound sign in place of a traditional URL.</p>
 				</figure>
 			
 				<figure>
-				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Audio_zpsxujtfjnb.gif" 
+				<img src="http://i1126.photobucket.com/albums/l605/
+				<figcaption>Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Audio_zpsxujtfjnb.gif" 
 				     alt="Audio" title="Audio" width="800">
 				<figcaption>
 						Audio
@@ -661,6 +677,18 @@ preceded by a pound sign in place of a traditional URL.</p>
 				</figure>
 		</details>
 		
+		<details>
+			<summary>
+				<b id="tables">Tables</b>
+			</summary>
+				<figure>
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/Introductio-to-HTML5-by-UniversityofMichigan--Table-heading_zpsorddrpcj.gif" 
+				     alt="Tables" title="Tables" width="800">
+				<figcaption>
+						Table Heading
+				</figcaption>
+				</figure>
+		</details>
 		<br>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
 			
