--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -660,8 +660,7 @@ preceded by a pound sign in place of a traditional URL.</p>
 				</figure>
 			
 				<figure>
-				<img src="http://i1126.photobucket.com/albums/l605/
-				<figcaption>Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Audio_zpsxujtfjnb.gif" 
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/Introductio-to-HTML5-by-UniversityofMichigan--Audio_zpsxujtfjnb.gif" 
 				     alt="Audio" title="Audio" width="800">
 				<figcaption>
 						Audio
