--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -687,6 +687,14 @@ preceded by a pound sign in place of a traditional URL.</p>
 						Table Heading
 				</figcaption>
 				</figure>
+			
+				<figure>
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/rowspan_zpsgueyoqiq.gif" 
+				     alt="Rowspan" title="Rowspan" width="800">
+				<figcaption>
+						Rowspan
+				</figcaption>
+				</figure>
 		</details>
 		<br>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
