--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -691,6 +691,8 @@ preceded by a pound sign in place of a traditional URL.</p>
 				<figure>
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/rowspan_zpsgueyoqiq.gif" 
 				     alt="Rowspan" title="Rowspan" width="800">
+					<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/rowspan2_zpswvtsu2sm.gif" 
+				     alt="Rowspan2" title="Rowspan2" width="800">
 				<figcaption>
 						Rowspan
 				</figcaption>
